Fix sassy share on blog
		Fixed z-index for sassy share overlappin the header

--- a/wp-content/themes/Jason Debus Heigl Foundation/style.css
+++ b/wp-content/themes/Jason Debus Heigl Foundation/style.css
@@ -1271,6 +1271,9 @@ img.aligncenter {
 	margin-bottom: 158px !important;
 	margin-left: -2px !important;
 }
+.heateor_sss_vertical_sharing{
+	z-index: auto;
+}
 
 /*Media queries*/
 /* Large Devices, Wide Screens */
